--- a/src/index.css
+++ b/src/index.css
@@ -12,3 +12,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+p {
+  font-size: 1rem;
+  line-height: 1.875rem;
+}
