--- a/src/App.css
+++ b/src/App.css
@@ -1,23 +1,43 @@
 .App {
+  min-height: 100vh;
+  height: fit-content;
+  width: 100%;
+}
+
+.spinner {
+  width: 100%;
   height: 100vh;
   display: flex;
-  gap: 20px;
-  padding: 40px;
+  align-items: center;
+  justify-content: center;
 }
 
-.custom-scroll::-webkit-scrollbar {
-  width: 8px;
-}
-.custom-scroll::-webkit-scrollbar-track {
-  background-color: transparent;
+.button {
+  border: none;
+  outline: none;
+  padding: 8px 16px;
+  background-color: #22c48b;
+  color: #fff;
+  border-radius: 5px;
+  width: fit-content;
+  text-align: center;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: 200ms;
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  justify-content: center;
 }
 
-.custom-scroll::-webkit-scrollbar-thumb {
-  border-radius: 20px;
-  background-color: lightgray;
-  transition: 300ms;
+.button:hover {
+  background-color: #33e4a6;
 }
 
-.custom-scroll::-webkit-scrollbar-thumb:hover {
-  background-color: gray;
+.button:active {
+  transform: translateY(1px);
+}
+
+.button:disabled {
+  background-color: gray !important;
 }
